force-app/main/default/objects/FieloEE__Promotion__c/fields/FieloEE__CountDays__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CountDays__c</fullName>
    <formula>FieloEE__FinalDate__c  - FieloEE__InitialDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>