force-app/main/default/objects/FieloEE__Promotion__c/fields/FieloEE__FinalDate__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FinalDate__c</fullName>
    <description>The end date for this promotion.</description>
    <inlineHelpText>Set the date when this promotion will finish.</inlineHelpText>
    <label>Final Date</label>
    <type>Date</type>
</CustomField>