force-app/main/default/objects/FieloEE__Promotion__c/fields/FieloEE__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The program to wich this promotion belongs.</description>
    <inlineHelpText>Enter the program to which this promotion belongs.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloEE__Program__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>