force-app/main/default/objects/FieloEE__Promotion__c/fields/FieloEE__RedemptionRule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Profiling</label>
    <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>