force-app/main/default/objects/FieloEE__Promotion__c/recordTypes/FieloEE__Default_Promotion.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Default_Promotion</fullName>
    <active>true</active>
    <label>Default Promotion</label>
</RecordType>