force-app/main/default/objects/FieloEE__Promotion__c/recordTypes/FieloEE__Standard_Promotion.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Standard_Promotion</fullName>
    <active>true</active>
    <label>Standard Promotion</label>
</RecordType>