force-app/main/default/objects/FieloEE__Promotion__c/validationRules/FieloEE__Default_Promotion_Profiling.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Default_Promotion_Profiling</fullName>
    <active>true</active>
    <errorConditionFormula>IF(RecordType.DeveloperName = &#39;Default_Promotion&#39; &amp;&amp;  FieloEE__RedemptionRule__c != null ,
true,
false)</errorConditionFormula>
    <errorMessage>Promotion Default must not have Profiling</errorMessage>
</ValidationRule>