force-app/main/default/objects/FieloEE__Promotion__c/validationRules/FieloEE__Modify_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Modify_RecordType</fullName>
    <active>true</active>
    <description>Validate that the user wont change the recordType</description>
    <errorConditionFormula>ISCHANGED(RecordTypeId)</errorConditionFormula>
    <errorMessage>The Record Type cannot be modified.</errorMessage>
</ValidationRule>