force-app/main/default/objects/FieloEE__Promotion__c/validationRules/FieloEE__Undelete_Default.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Undelete_Default</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(FieloEE__InitialDate__c )  &amp;&amp;
ISNULL( FieloEE__FinalDate__c )</errorConditionFormula>
    <errorMessage>Can not delete the Default Promotion</errorMessage>
</ValidationRule>