force-app/main/default/objects/FieloEE__Promotion__c/validationRules/FieloEE__Validate_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Validate_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>FieloEE__InitialDate__c   &gt; FieloEE__FinalDate__c</errorConditionFormula>
    <errorMessage>Final Date must be great or equal to Initial Date</errorMessage>
</ValidationRule>