force-app/main/default/objects/FieloEE__Promotion__c/listViews/FieloEE__All_Promotions.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Promotions</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Program__c</columns>
    <columns>FieloEE__InitialDate__c</columns>
    <columns>FieloEE__FinalDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Promotions</label>
    <language>en_US</language>
</ListView>